setup CI and release pipeline, update docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@
 
 services:
   showmycards:
+    image: ghcr.io/showmycards/showmycards:latest
     build:
       context: .
       dockerfile: docker/Dockerfile
